# wolfcon-2025-ai-workshop

./: .gitignore  README.md  challenges.py  checklist.md  common.py  folio_ai_agents.py  iching.json  iching.py  index.html  introduction.py  main.py  mcp_intro.py  pages.py  prompting.py  pyproject.toml  pyscript.json  welcome.py
docs/: ai-agents.md  ai-overview.md  attribution-copyright.md  auto-generated.md  bias-ai.md  carbon-footprint.md  combining-techniques.md  commercial-llms.md  cot.md  deepfakes-ai-slop.md  edge-ai-module.md  hallucinations.md  iching.md  inventory-agent.md  invoice-agent.md  llms.md  mcp-clients.md  mcp-examples.md  mcp-servers.md  multi-shot.md  nn-transformers.md  open-source-llms.md  pdoom-agi.md  privacy-concerns.md  prompt-overview.md  rag.md  sources.md  structure.md  topics.md  using-claude-desktop.md  welcome.md  what-mcp.md  wrap-up-final-thoughts.md  zero-shot.md
mcp/: index.md
notebooks/: FinanceInvoiceAgent.ipynb  InventoryInstanceAgent.ipynb  OrgsVectorDB.ipynb
notebooks/.ipynb_checkpoints/: InventoryInstanceAgent-checkpoint.ipynb
wheels/: puepy-0.6.5-py3-none-any.whl
