[project]
name = "wolfcon-2025-ai-preconference"
version = "0.1.0"
description = "Website for WOLFcon 02025 AI Pre-conference"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folioclient>=0.70.2",
    "jupyterlab>=4.4.7",
    "pydantic-ai>=1.0.10",
    "pymilvus[milvus-lite,model]>=2.6.2",
]
